change the new Double Double.valueOf